# hivemind

./: .gitignore  .readthedocs.yml  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  codecov.yml  docker-compose.yml  modal_ci.py  pyproject.toml  requirements-bitsandbytes.txt  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.py
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: blank-issue.md  bug_report.md  feature_request.md
.github/workflows/:  run-tests.yml  check-style.yml  check_style.yml  main-ci.yml  ossar-analysis.yml  push-docker-image.yml  release.yml  run-benchmarks.yml  run-tests-on-modal.yml  run-tests.yml
benchmarks/: benchmark_averaging.py  benchmark_dht.py  benchmark_optimizer.py  benchmark_tensor_compression.py  benchmark_throughput-p2p.py  benchmark_throughput.py  benchmark_throughput_p2p.py
docs/: conf.py  environment.yaml  environment.yml  index.md  index.rst  requirements.txt
docs/_static/: bug.odp  dht.odp  fix_rtd.css  optimizer.odp
docs/modules/: averaging.rst  client.md  client.rst  dht.rst  index.rst  optim.rst  runtime.md  server.rst
docs/user/: acknowledgements.md  benchmarks.md  contributing.md  dht.md  moe.md  quickstart.md
examples/: example.py  playgroud_example.py
examples/albert/: README.md  TPU.py  arguments.py  metrics_utils.py  optim.py  requirements.txt  run_aux.py  run_first_peer.py  run_trainer.py  run_training_monitor.py  tokenize_wikitext103.py  utils.py
examples/ppo/: README.md  ppo.py  requirements.txt
examples/swin/: dataloader.py  downloader.py  main.py  main_worker.py  metrics.py  train.py  validation.py
examples/vit/: train_vit.py
hivemind/: __init__.py
hivemind/averaging/: __init__.py  accumulators.py  allreduce.py  averager.py  control.py  group_info.py  key_manager.py  load_balancing.py  matchmaking.py  partition.py  power.py  training.py
hivemind/client/: __init__.py  allreduce.py  averager.py  averaging.py  beam_search.py  collaboration_arguments.py  dht_ops.py  expert.py  expert_uid.py  moe.py  optimizer.py  switch_moe.py
hivemind/client/averaging/: __init__.py  allreduce.py  averager.py  dht_handler.py  group_key.py  key_manager.py  load_balancing.py  matchmaking.py  partition.py  potential_leaders.py  protocol.py  tensor_partition.py  training.py  weighted.py
hivemind/client/optim/: __init__.py  averaging_utils.py  base.py  collaborative.py  performance_ema.py  simple.py
hivemind/compression/: __init__.py  adaptive.py  base.py  floating.py  quantization.py  serialization.py  simple.py
hivemind/dht/: __init__.py  beam_search.py  crypto.py  dht.proto  dht.py  id.py  node.py  protocol.py  routing.py  routing_pos.py  routing_pos_v1.py  schema.py  search.py  storage.py  traverse.py  validation.py
hivemind/hivemind_cli/: config.yml  run_dht.py  run_server.py
hivemind/moe/: __init__.py  expert.py  expert_uid.py
hivemind/moe/client/: __init__.py  balanced_expert.py  balancer.py  beam_search.py  expert.py  moe.py  remote_expert_worker.py  switch_moe.py
hivemind/moe/server/: __init__.py  checkpoints.py  connection_handler.py  dht_handler.py  expert_backend.py  expert_uid.py  module_backend.py  runtime.py  server.py  task_pool.py
hivemind/optim/: __init__.py  adaptive.py  averaged.py  base.py  collaborative.py  ddp.py  decentralized_optimizers.py  grad_averager.py  grad_scaler.py  optimizer.py  performance_ema.py  power_ef_averager.py  power_sgd_averager.py  progress_tracker.py  simple.py  state_averager.py  training_averager.py
hivemind/p2p/: __init__.py  p2p_daemon.py  servicer.py
hivemind/proto/: auth.proto  auth_pb2.py  averaging.proto  averaging_pb2.py  crypto.proto  crypto_pb2.py  dht.proto  dht_pb2.py  generate.sh  p2pd.proto  p2pd_pb2.py  runtime.proto  runtime_pb2.py  test.proto  test_pb2.py
hivemind/runtime/: __init__.py  expert_backend.py  task_pool.py
hivemind/server/: __init__.py  checkpoint_saver.py  checkpoints.py  config.yml  connection_handler.proto  connection_handler.py  dht_handler.py  expert_backend.py  expert_uid.py  module_registrator.py  run_server.py  run_server_script.py  runtime.py  task_pool.py
hivemind/utils/: __init__.py  asyncio.py  auth.py  autograd.py  channel.py  compat.py  compression.py  connection.py  crypto.py  custom_layers.py  data.py  grpc.py  lazy_value.py  limits.py  logging.py  math.py  mpfuture.py  nested.py  networking.py  performance_ema.py  proto.py  repeated_timer.py  serializer.py  shared_future.py  streaming.py  tensor_descr.py  threading.py  timed_storage.py
scripts/: config.yml  run_dht.py  run_server.py  start_server.py
src/hivemind/: __init__.py
tesseract/: __init__.py
tesseract/client/: __init__.py  expert.py  gating_function.py  moe.py  remote_expert.py  remote_moe.py
tesseract/dht/: __init__.py
tesseract/network/: __init__.py
tesseract/runtime/: __init__.py  expert_backend.py  task_pool.py
tesseract/server/: __init__.py  connection_handler.py  dht_handler.py  network_handler.py
tesseract/utils/: __init__.py  autograd.py  connection.py  data.py  serializer.py  threading.py
tests/: beam_search.py  benchmark_averaging.py  benchmark_averaging_once.py  benchmark_dht.py  benchmark_tensor_compression.py  benchmark_throughput.py  conftest.py  custom_networks.py  dht.py  log  test_LocalStorage.py  test_allreduce.py  test_allreduce_fault_tolerance.py  test_auth.py  test_averaging.py  test_checkpoints.py  test_cli_scripts.py  test_compression.py  test_connection_handler.py  test_custom_expert.py  test_custom_experts.py  test_dht.py  test_dht_crypto.py  test_dht_experts.py  test_dht_node.py  test_dht_protocol.py  test_dht_schema.py  test_dht_storage.py  test_dht_validation.py  test_expert_backend.py  test_expert_training.py  test_kademlia.py  test_kademlia_protocol.py  test_moe.py  test_multiaddr.py  test_multiaddr_protocols.py  test_multiaddr_transforms.py  test_optimizer.py  test_p2p_daemon.py  test_p2p_daemon_bindings.py  (+10 more)
tests/test_utils/: __init__.py  custom_networks.py  dht_swarms.py  layers.py  networking.py  p2p_daemon.py  run_server.py
(+94 files in other folders)
