[build-system]
requires = ["setuptools>=64", "grpcio-tools>=1.33.2,<1.68"]
build-backend = "setuptools.build_meta"

[project]
name = "hivemind"
dynamic = ["version"]
description = "Decentralized deep learning in PyTorch"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Learning@home & contributors", email = "hivemind-team@hotmail.com"}
]
keywords = [
    "pytorch",
    "deep learning",
    "machine learning",
    "gpu",
    "distributed computing",
    "volunteer computing",
    "dht",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
hivemind-dht = "hivemind.hivemind_cli.run_dht:main"
hivemind-server = "hivemind.hivemind_cli.run_server:main"

[project.urls]
Homepage = "https://github.com/learning-at-home/hivemind"
Repository = "https://github.com/learning-at-home/hivemind"
Documentation = "https://learning-at-home.readthedocs.io"

[tool.setuptools.dynamic]
version = {attr = "hivemind.__version__"}

[tool.setuptools.packages.find]
exclude = ["tests"]

[tool.setuptools.package-data]
hivemind = ["proto/*", "hivemind_cli/*"]

[tool.coverage.run]
concurrency = ["thread", "multiprocessing"]
omit = ["src/hivemind/proto/*"]
source = ["hivemind"]
parallel = true
sigterm = true

[tool.ruff]
exclude = [
    "__init__.py",
    "*_pb2.py"
]
line-length = 119
required-version = "==0.11.2"
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "YTT", "LOG"]
ignore = ["E501", "E702", "E731"]
dummy-variable-rgx = "^_$"

[tool.ruff.lint.isort]
known-local-folder = ["arguments", "test_utils", "tests", "utils"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
